grammar.js
    source_file: $ => repeat($.sentence),

    sentence: $ => choice(
      seq(
        optional($.fail),
        optional($.attributes),
        optional($.selector),
        choice(
          $._vernacular_command,
          $.ltac_definition,
          $._ltac_expr,
        ),
        choice(".", "...")
      ),
      $.proof_block,
      $.bullet
    ),

    fail: $ => "Fail",

    attributes: $ => choice(
      seq(
        repeat1($._modern_attribute_block),
        repeat($.legacy_attr)
      ),
      repeat1($.legacy_attr)
    ),

    _modern_attribute_block: $ => seq(
      "#",
      "[",
      optional(seq(
        $.attribute,
        repeat(seq(",", $.attribute))
      )),
      "]"
    ),

    attribute: $ => seq($.ident, optional($.attr_value)),

    attr_value: $ => choice(
      seq("=", $.string),
      seq("=", $.qualid),
      seq(
        "(",
        $.attribute,
        repeat(seq(",", $.attribute)),
        ")"
      ),
    ),

    legacy_attr: $ => choice(
      choice("Local", "Global"),
      choice("Polymorphic", "Monomorphic"),
      choice("Cumulative", "NonCumulative"),
      "Private",
      "Program"
    ),

    _vernacular_command: $ =>
      choice(
        $.require_command,
        $.import_command,
        $.export_command,
        $.create_hintdb_command,
        $.create_rewrite_hintdb_command,
        $.hint_command,
        $.evaluation_command,
        $.extraction_command,
        $.extract_command,
        $.set_command,
        $.unset_command,
        $.add_command,
        $.remove_command,
        $.test_command,
        $.show_proof_command,
        $.coercion_command,
        $.declare_command,
        $.open_scope_command,
        $.close_scope_command,

        $.theorem_command,
        $.definition_command,
        $.fixpoint_command,
        $.inductive_command,
        $.assumption_command,
        $.arguments_command,
        $.section_command,
        $.module_command,
        $.end_command,
        $.reserved_notation_command,
        $.notation_command,

        $.proof_command,
        $.qed_command,
        $.save_command,
        $.defined_command,
        $.admitted_command,
        $.abort_command,
      ),

    export_command: $ => seq(
      "Export",
      optional($.import_categories),
      repeat1($.filtered_import)
    ),

    neg_selection: $ => "-",

    import_categories: $ => seq(
      optional($.neg_selection),
      "(",
      field("category", $._name),
      repeat(seq(",", field("category", $._name))),
      ")"
    ),

    filtered_import: $ => seq(
      field("module", $._name),
      optional(seq(
        "(",
        $.filtered_import_item,
        repeat(seq(",", $.filtered_import_item)),
        ")"
      ))
    ),

    filtered_import_item: $ => seq(
      field("name", $._name),
      optional($.import_wildcard)
    ),

    import_wildcard: $ => "(..)",

    create_hintdb_command: $ => seq(
      "Create",
      "HintDb",
      field("name", $.ident),
      optional($.discriminated_db)
    ),

    discriminated_db: $ => "discriminated",

    hint_command: $ => seq(
      "Hint",
      choice(
        $.hint_extern,
        seq(
          choice("Resolve", "Rewrite", "Constructors", "Unfold", "Immediate", "Transparent", "Opaque"),
          repeat1(field("name", $._name)),
          optional(seq(":", field("database", $.ident))))
      )),

    evaluation_command: $ => seq(
      choice("Check", "Compute", "Print", "Search", "Locate"),
      $._term,
      optional(seq(":", $.type))
    ),

    extraction_command: $ => choice(
      seq("Extraction", $._name),
      seq("Recursive", "Extraction", repeat1($._name)),
      seq("Extraction", $.string, repeat1($._name)),
      seq("Extraction", "Library", $.ident),
      seq("Recursive", "Extraction", "Library", $.ident),
      seq("Separete", "Extraction", repeat1($._name)),
      seq("Extraction", "TestCompile", repeat1($._name)),
      seq("Extraction", "Language", $.language),
      seq("Extraction", "Optimize"),
      seq("Extraction", "Conservative", "Types"),
      seq("Extraction", "KeepSingleton"),
      seq("Extraction", "AutoInline"),
      seq("Extraction", choice("Inline", "NoInline"), repeat1($._name)),
      seq("Extraction", "Implicit", $._name, "[", repeat(choice($.ident, $.number)), "]"),
      seq("Extraction", "SafeImplicits"),
      seq("Extraction", "AccessOpaque"),
      seq("Extraction", "Blacklist", repeat1($.ident)),
      seq("Extraction", "File", "Comment", $.string),
      seq("Extraction", "Flag", $.number),
      seq("Extraction", "TypeExpand"),
      seq("Extraction", "Output", "Directory", $.string),
    ),

    extract_command: $ => choice(
      seq("Extract", "Constant", $._name, repeat($.string), "=>", choice($.ident, $.string)),
      seq("Extract", "Inlined", "Constant", $._name, "=>", choice($.ident, $.string)),
      seq("Extract", "Inductive", $._name, "=>", choice($.ident, $.string),
        "[", repeat(choice($.ident, $.string)), "]", optional($.string)),
      seq("Extract", "Foreign", "Constant", $._name, "=>", $.string),
      seq("Extract", "Callback", optional($.string), $._name),
    ),

    language: $ => choice("OCaml", "Haskell", "Scheme", "JSON"),

    add_command: $ =>
      seq("Add", $.setting_name, repeat1(choice($._name, $.string))),

    setting_name: $ => prec.right(repeat1($.ident)),

    show_proof_command: $ => seq(
      "Show", "Proof", optional(seq("Diffs", optional("removed")))
    ),

    coercion_command: $ => seq(
      "Coercion",
      field("name", $.reference),
      optional(seq(
        ":", $.coercion_class, ">->", $.coercion_class))
    ),

    coercion_class: $ => choice("Funclass", "Sortclass", $.reference),

    declare_command: $ => choice(
      $._declare_scope_command,
      $._declare_custom_entry_command
    ),

    _declare_scope_command: $ => seq(
      "Declare", "Scope", field("name", $.ident)
    ),

    _declare_custom_entry_command: $ => seq(
      "Declare", "Custom", "Entry", field("name", $.ident)
    ),

    definition_command: $ => seq(
      choice("Definition", "Example"),
      $.ident_decl,
      $._def_body
    ),

    _def_body: $ => choice(
      seq(
        repeat($.binder),
        optional(seq(":", $.type)),
        ":=",
        field("body", $._term)
      ),
      seq(
        repeat($.binder),
        ":",
        $.type
      )
    ),

    assumption_command: $ => seq(
      choice(
        "Axiom", "Axioms",
        "Conjecture", "Conjectures",
        "Parameter", "Parameters",
        "Hypothesis", "Hypotheses",
        "Variable", "Variables",
      ),

      optional(seq(
        "Inline",
        optional(seq("(", $.number, ")"))
      )),

      choice(
        $.assumpt,
        repeat1(seq("(", $.assumpt, ")"))
      )
    ),

    assumpt: $ => seq(repeat1($.ident_decl), $.of_type),

    of_type: $ => seq(choice(":", ":>"), $.type),

    arguments_command: $ => seq(
      "Arguments",
      $.reference,

      repeat(choice(
        $.wildcard,
        $.ident,
        seq("(", repeat1($.ident), ")"),
        seq("{", repeat1($.ident), "}"),
        seq("[", repeat1($.ident), "]"),
        "/",
        "&"
      )),

      optional(seq(
        ",",
        repeat1(choice(
          $.ident,
          seq("[", repeat1($.ident), "]"),
          seq("{", repeat1($.ident), "}")
        ))
      )),

      // optional(seq(
      //   ":",
      //   repeat1($._args_modifier_placeholder)
      // ))
    ),

    // _args_modifier_placeholder: $ => "",

    defined_command: $ => seq("Defined", optional($.ident)),

    bullet: $ => /[+*-]+/,

    // ~~~~~~~~~~~~~~~ Terms ~~~~~~~~~~~~~~~~~~

    _term: $ => choice(
      $._atomic_term,
      $.application,
      $.lambda_function,
      $.quantifier_term,
      $.let_expression,
      $.fix_expression,
      $.if_expression,
      $.arrow_term,
      $._infix_operation,
      $.imp_evaluation_operation,
    ),

    _atomic_term: $ => seq(
      optional("'"),
      choice(
        $.ident,
        $.qualid,
        seq("@", $._name),
        $.scoped_term,
        $.number,
        $.string,
        $.metavariable,
        $.parenthesized_term,
        $.list_literal,
        $.match_expression,
        $.double_dot,

        $.custom_notation_block,
      ),
    ),

    parenthesized_term: $ => seq(
      "(",
      $._term,

      optional(choice(
        repeat1(seq(",", $._term)),
        repeat1(seq(";", $._term))
      )),

      optional(choice(",", ";")),
      ")"
    ),

    application: $ => prec.left('application', seq(
      $._term,
      repeat1(choice(
        seq("(", $.ident, ":=", $._term, ")"),
        seq("(", $.number, ":=", $._term, ")"),
        $._atomic_term
      ))
    )),

    quantifier_term: $ => prec.right('quantifier_term', seq(
      choice("forall", "exists"),
      $.open_binders,
      ",",
      alias($._term, $.type)
    )),

    additive_operation: $ => prec.left('additive', seq(
      $._term,
      choice("+", "-"),
      $._term
    )),

    comparison_operation: $ => prec.left('comparison', seq(
      $._term,
      choice("=", "<>", "<", "<=", ">", ">=", "=?", "<>?", "<?", "<=?", ">?", ">=?"),
      $._term
    )),

    logical_conjunction: $ => prec.right('conjunction', seq(
      $._term,
      "/\\",
      $._term
    )),

    custom_operation: $ => prec.left('custom', seq(
      $._term,
      alias(
        choice(
          // any combination, but a dot
          /[\-!#$%&*+\/<=>?@^|~;]+/,
          // any combination with a dot, but using at least one non-dot char
          /[\-!#$%&*+.\/<=>?@^|~;]*[\-!#$%&*+\/<=>?@^|~;][\-!#$%&*+.\/<=>?@^|~;]*/,
          /\.\./,
          /\.\.\.\.+/
        )
        , $.custom_operator),
      $._term
    )),

    arrow_term: $ => prec.right('arrow_term', seq(
      field("antecedent", $._term),
      "->",
      field("consequent", $._term)
    )),

    // ~~~~~~~~~~~~~~~~ Patterns ~~~~~~~~~~~~~~~~
    // https://rocq-prover.org/doc/V9.2.0/refman/language/core/variants.html#grammar-token-term_match

    type: $ => $._term,

    _binder_name: $ => choice($.wildcard, $._name),

    binder: $ => choice(
      $._binder_name,
      seq("(", repeat($._binder_name), ":", $.type, ")"),
      seq("(", $._binder_name, optional(seq(":", $.type)), ":=", $._term, ")"),
      $.implicit_binders,
      seq("(", $._binder_name, ":", $.type, "|", $._term, ")"),
      seq($.destructuring_pattern),
    ),

    implicit_binders: $ => choice(
      seq("{", repeat1($._binder_name), optional(seq(":", $.type)), "}"),
      seq("[", repeat1($._binder_name), optional(seq(":", $.type)), "]")
    ),

    open_binders: $ => seq(
      repeat1($.binder),
      optional(seq(":", $.type))
    ),

    // ~~~~~~~~~~~~~~~ Tactics ~~~~~~~~~~~~~~~~~~~

    _ltac_expr: $ => choice(
      $.parenthesized_tactic,

      $.tactic_sequence,
      $.tactic_branch,
      $.tactic_invocation,

      $.tactic_or,
      $.match_goal,
    ),

    tactic_invocation: $ => choice(
      $.intros_tactic,
      $.assert_tactic,
      $.rewrite_tactic,
      $.tactical,
      $.generic_tactic
    ),

    intros_tactic: $ => seq(
      choice("intro", "intros"),
      repeat($.intro_pattern)
    ),

    atomic_term_with_bindings: $ => prec.right(seq(
      $._atomic_term, optional(seq("with", $.bindings))
    )),

    generic_tactic: $ => prec.left('tactic_application', seq(
      field("name", $.ident),
      optional($.generic_tactic_body),
      repeat(seq(",", $.generic_tactic_body)),
      optional(",")
    )),

    generic_tactic_body: $ => choice(
      seq(
        repeat1($._tactic_arg),
        repeat($._tactic_clause)
      ),
      repeat1($._tactic_clause)
    ),

    _tactic_clause: $ => choice(
      $.in_clause,
      $.as_clause,
      $.eqn_clause,
      $.by_clause,
      $.using_clause,
    ),

    _tactic_arg: $ => choice(
      $.atomic_term_with_bindings,
    ),

    intro_pattern: $ => choice(
      $.ident,
      $.wildcard,
      "?",
      "->",
      "<-",
      $.bracketed_intro_pattern
    ),

    _name: $ => choice(
      $.ident,
      $.qualid
    ),

    ident: $ => /[\p{L}_][\p{L}_\p{N}']*/u,

    ident_decl: $ => seq(
      $.ident,
    ),


    number: $ => choice(
      /\d[\d_]*(\.[\d_]+)?([eE][+-]?\d[\d_]*)?/,
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*(\.[0-9a-fA-F_]+)?([pP][+-]?\d[\d_]*)?/
    ),

    reference: $ => choice(
      $._name,
      seq($.string, optional(seq("%", $.ident)))
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"]/,
        '""'
      )),
      '"'
    ),

    wildcard: $ => "_",

    // Rules for Software Foundations Imp Chapters
