test/corpus/bullet.txt
==================
Single Bullet
==================
+
---
(source_file
  (sentence
    (bullet)))

==================
Multiple Bullets
==================
+++
---
(source_file
  (sentence
    (bullet)))
