test/corpus/extract_command.txt
==================
Basic Extract Commands
==================
Extract Inductive bool => "bool" [ "true" "false" ].
Extract Inductive nat => "int"
  [ "0" "(fun x -> x + 1)" ]
  "(fun zero succ n ->
      if n=0 then zero () else succ (n-1))".
Extract Constant plus => "( + )".
Extract Constant mult => "( * )".
Extract Constant eqb => "( = )".
Extract Inductive sumbool => "bool" ["true" "false"].
---

(source_file
  (sentence
    (extract_command
      (ident)
      (string)
      (string)
      (string)))
  (sentence
    (extract_command
      (ident)
      (string)
      (string)
      (string)
      (string)))
  (sentence
    (extract_command
      (ident)
      (string)))
  (sentence
    (extract_command
      (ident)
      (string)))
  (sentence
    (extract_command
      (ident)
      (string)))
  (sentence
    (extract_command
      (ident)
      (string)
      (string)
      (string))))
